--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,6 +22,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
