--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tech-task-ds",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://leonidlukin.github.io/tech-task-ds",
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,16 +19,17 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
-    "nanoid": "^4.0.0",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
@@ -40,7 +42,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
